style fix and legibility improvement pagebreak

--- a/frontend/src/modules/elements/PageBreak.css
+++ b/frontend/src/modules/elements/PageBreak.css
@@ -9,17 +9,19 @@
 .pagebreak-button > button,
 .pagebreak-button > input[type='button'] {
   color: white;
-  /*background-color: #12bc00;*/
-  background-color: #6dae19;
-  border: 1px whitesmoke;
-  width: 6.6rem;
+  cursor: pointer;
+  background-color: #9ee048;
+  width: 7rem;
   height: 2.6rem;
   text-align: center;
-  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.08);
-  border-radius: 5px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
   flex-direction: column;
+  border: none;
+  border-radius: unset;
+  font-weight: bolder;
+  font-size: 16px;
 }
 
 .pagebreak-navControls {
