--- a/frontend/src/modules/elements/index.css
+++ b/frontend/src/modules/elements/index.css
@@ -2,9 +2,7 @@
   background-color: white;
   width: 750px;
   margin: 0 auto;
-  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.08);
-  -webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.08);
-  -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
 }
 
 .builderStage .form > .element {
